Tidy up some footnotes

--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -34,10 +34,10 @@
 \vs p041 4:1 The mass of your sun is slightly greater than the estimate of your physicists, who have reckoned it as about $2\times 10^{30}$\,kg\fnst{\textbf{about $2 \times 10^{30}$\,kg}, The present estimate is: $1.98892 \times 10^{30}$ kg.}. It now exists about halfway between the most dense and the most diffuse stars, having about 1.5 times the density of water\fnst{\textbf{about 1.5 times the density of water}, More accurately: $1.408 \times 10^3$\,kg/m\ts{3}.}. But your sun is neither a liquid nor a solid --- it is gaseous --- and this is true notwithstanding the difficulty of explaining how gaseous matter can attain this and even much greater densities.
 \vs p041 4:2 \pc Gaseous, liquid, and solid states are matters of atomic\hyp{}molecular relationships, but density is a relationship of space and mass. Density varies directly with the quantity of mass in space and inversely with the amount of space in mass, the space between the central cores of matter and the particles which whirl around these centres as well as the space within such material particles.
 \vs p041 4:3 \pc Cooling stars can be physically gaseous and tremendously dense at the same time. You are not familiar with the solar \bibemph{supergases,} but these and other unusual forms of matter explain how even nonsolid suns can attain a density equal to iron --- about the same as Urantia --- and yet be in a highly heated gaseous state and continue to function as suns. The atoms in these dense supergases are exceptionally small; they contain few electrons. Such suns have also largely lost their free ultimatonic stores of energy.
-\vs p041 4:4 One of your near\hyp{}by suns, which started life with about the same mass as yours, has now contracted almost to the size of Urantia, having become 40,000 times as dense as your sun. The weight of this hot\hyp{}cold gaseous\hyp{}solid is about 61 kg/cm\ts{3}\fnst{\textbf{61 kg/cm\ts{3}}, Let us calculate this density explicitly, using the data in the text: $\rho_X = M_{Sun}/V_{Earth}$. The present scientific estimate for the mass of the sun $M_{Sun} = 2\times 10^{30}$\,kg and the volume of the Earth $V_{Earth} =  {4 \over 3} \pi (6.37 \times 10^{8} cm)^3 = 1.08 \times 10^{27}$\,cm\ts{3}. Thus, $\rho_X = {{2\times 10^{30}} \over {1.08\times 10^{27}}} = 1851.8$\,kg/cm\ts{3}, which differs greatly from the figure 61\,kg/cm\ts{3} given in the text. Therefore, this ``near-by sun'' has lost most of its mass by now.}. And still this sun shines with a faint reddish glow, the senile glimmer of a dying monarch of light.\fnc{\ldots{}having become \bibtextul{sixty thousand} times as dense as your sun\ldots{} \bibexpl{Textual consistency and current scientific estimates of our sun’s density both support the change to “40,000.” The first paragraph of this section states that our sun is about 1.5 times the density of water 1 g/cm\ts{3}, and 40,000 times this is 40 kg/cm\ts{3}; the current scientific estimate of the sun’s density is 1.4 times the density of water; 40,000 times that is 56 kg/cm\ts{3}. The likely cause of this error in the 1955 text is that the number in question was written as a numeral in the manuscript (40,000 not forty thousand), and the error was caused by a simple keystroke error in which 6 was mis-keyed for 4, creating 60,000 instead of 40,000. When the text was formatted for printing, the numerals were changed to words, and an error that formerly consisted of one digit was transformed into an incorrect word. The formatting of words and numbers for printing is not a revelatory issue; it is a matter of style, and is covered extensively in the \bibemph{Chicago Manual of Style}. (The problem at \bibref[43:1.6]{p043 1:6} in the text appears to have had an identical origin, and \bibref[42:5.1]{p042 5:1} in the text is very closely related.)}}
+\vs p041 4:4 One of your near\hyp{}by suns, which started life with about the same mass as yours, has now contracted almost to the size of Urantia, having become 40,000 times as dense as your sun. The weight of this hot\hyp{}cold gaseous\hyp{}solid is about 61 kg/cm\ts{3}\fnst{\textbf{61 kg/cm\ts{3}}, Calculating the density we obtain $\rho = 1851.8$\,kg/cm\ts{3}, which differs greatly from the figure 61\,kg/cm\ts{3} given in the text. Therefore, this ``near-by sun'' has lost most of its mass by now.}. And still this sun shines with a faint reddish glow, the senile glimmer of a dying monarch of light.\fnc{\ldots{}having become \bibtextul{sixty thousand} times as dense as your sun\ldots{} \bibexpl{Textual consistency and current scientific estimates of our sun’s density both support the change to “40,000.” The first paragraph of this section states that our sun is about 1.5 times the density of water 1 g/cm\ts{3}, and 40,000 times this is 40 kg/cm\ts{3}; the current scientific estimate of the sun’s density is 1.4 times the density of water; 40,000 times that is 56 kg/cm\ts{3}. The likely cause of this error in the 1955 text is that the number in question was written as a numeral in the manuscript (40,000 not forty thousand), and the error was caused by a simple keystroke error in which 6 was mis-keyed for 4, creating 60,000 instead of 40,000. When the text was formatted for printing, the numerals were changed to words, and an error that formerly consisted of one digit was transformed into an incorrect word. The formatting of words and numbers for printing is not a revelatory issue; it is a matter of style, and is covered extensively in the \bibemph{Chicago Manual of Style}. (The problem at \bibref[43:1.6]{p043 1:6} in the text appears to have had an identical origin, and \bibref[42:5.1]{p042 5:1} in the text is very closely related.)}}
 \vs p041 4:5 Most of the suns, however, are not so dense. One of your nearer neighbours\fnst{\textbf{One of your nearer neighbours}, The distance to Capella (α Aurig\ae) is estimated to be about 43 light years.} has a density exactly equal to that of your atmosphere at sea level. If you were in the interior of this sun, you would be unable to discern anything. And temperature permitting, you could penetrate the majority of the suns which twinkle in the night sky and notice no more matter than you perceive in the air of your earthly living rooms.
 \vs p041 4:6 The massive sun of Veluntia, one of the largest in Orvonton, has a density only 0.001 that of Urantia’s atmosphere. Were it in composition similar to your atmosphere and not superheated, it would be such a vacuum that human beings would speedily suffocate if they were in or on it.
-\vs p041 4:7 Another of the Orvonton giants now has a surface temperature a trifle under 1,600\,°C. Its diameter is over 482,803,200\,km --- ample room to accommodate your sun and the present orbit of the earth. And yet, for all this enormous size, over 40,000,000 times that of your sun, its mass is only about 30 times greater. These enormous suns have an extending fringe that reaches almost from one to the other.
+\vs p041 4:7 Another of the Orvonton giants now has a surface temperature a trifle under 1,600\,°C. Its diameter is over 482,803,200\,km --- ample room to accommodate your sun and the present orbit of the earth. And yet, for all this enormous size, over 40,000,000 times\fnst{\textbf{40,000,000 times}, Here the ``size'' obviously signifies the volume, not the diameter.} that of your sun, its mass is only about 30 times greater. These enormous suns have an extending fringe that reaches almost from one to the other.
 \usection{5.\bibnobreakspace Solar Radiation}
 \vs p041 5:1 That the suns of space are not very dense is proved by the steady streams of escaping light\hyp{}energies. Too great a density would retain light by opacity until the light\hyp{}energy pressure reached the explosion point. There is a tremendous light or gas pressure within a sun to cause it to shoot forth such a stream of energy as to penetrate space for millions upon millions of kilometres to energize, light, and heat the distant planets. 4.6\,m of surface of the density of Urantia would effectually prevent the escape of all X\hyp{}rays and light\hyp{}energies from a sun until the rising internal pressure of accumulating energies resulting from atomic dismemberment overcame gravity with a tremendous outward explosion.
 \vs p041 5:2 Light, in the presence of the propulsive gases, is highly explosive when confined at high temperatures by opaque retaining walls. Light is real. As you value energy and power on your world, sunlight would be economical at a million pounds sterling a kilogram.
@@ -68,7 +68,7 @@
 \vs p041 7:10 \ublistelem{7.}\bibnobreakspace Recaptive light and other matter which are drawn back into the sun after having left it, together with other energies having extrasolar origin.
 \vs p041 7:11 \pc There exists a regulating blanket of hot gases (sometimes millions of degrees in temperature) which envelops the suns, and which acts to stabilize heat loss and otherwise prevent hazardous fluctuations of heat dissipation. During the active life of a sun the internal temperature of 19,500,000\,°C remains about the same quite regardless of the progressive fall of the external temperature.
 \vs p041 7:12 \pc You might try to visualize 19,500,000\,°C of heat, in association with certain gravity pressures, as the electronic boiling point. Under such pressure and at such temperature all atoms are degraded and broken up into their electronic and other ancestral components; even the electrons and other associations of ultimatons may be broken up, but the suns are not able to degrade the ultimatons.
-\vs p041 7:13 These solar temperatures operate to enormously speed up the ultimatons and the electrons, at least such of the latter as continue to maintain their existence under these conditions. You will realize what high temperature means by way of the acceleration of ultimatonic and electronic activities when you pause to consider that one drop of ordinary water contains over one billion trillions of atoms\fnst{\textbf{one billion trillions of atoms}, the mass of such a drop would be: $m = {1\over 3}(2 m_H + m_O)\times 10^{21} = 0.01\,g$.}. This is the energy of more than 100 horsepower exerted continuously for two years\fnst{\textbf{100 horsepower \ldots\ two years}, assuming the value of 1\,horsepower = 745.7\,watts, we obtain for the energy $E = 100\times 745.7\times 2\times 365\times 86,400 = 4.7\times 10^{12}\,J$. Using Einstein's formula $E = mc^2$, we can calculate the mass of the drop: $m = E/c^2 = 0.05\,g$. This is five times greater than the estimate obtained in the previous note, based on the number of atoms in the drop. Therefore, either Einstein's formula is incorrect (but then how to reconcile this with the statement made in \bibref[42:4.11]{p042 4:11}?) or the masses of hydrogen and oxygen atoms are different from the present values or, perhaps, the revelators are not overly concerned with being absolutely accurate in such minor technical details.}. The total heat now given out by the solar system sun each second is sufficient to boil all the water in all the oceans on Urantia in just one second of time.
+\vs p041 7:13 These solar temperatures operate to enormously speed up the ultimatons and the electrons, at least such of the latter as continue to maintain their existence under these conditions. You will realize what high temperature means by way of the acceleration of ultimatonic and electronic activities when you pause to consider that one drop of ordinary water contains over one billion trillions of atoms\fnst{\textbf{one billion trillions of atoms}, the mass of such a drop would be: $m = 1/3\times(2 m_H + m_O)\times 10^{21} = 0.01\,g$.}. This is the energy of more than 100 horsepower exerted continuously for two years\fnst{\textbf{100 horsepower \ldots\ two years}, assuming the value of 1\,horsepower = 745.7\,watts, we obtain for the energy $E = 100\times 745.7\times 2\times 365\times 86,400 = 4.7\times 10^{12}\,J$. Using Einstein's formula $E = mc^2$, we can calculate the mass of the drop: $m = E/c^2 = 0.05\,g$. This is five times greater than the estimate obtained in the previous note, based on the number of atoms in the drop. Therefore, either Einstein's formula is incorrect (but then how to reconcile this with the statement made in \bibref[42:4.11]{p042 4:11}?) or the masses of hydrogen and oxygen atoms are different from the present values or, perhaps, the revelators are not overly concerned with being absolutely accurate in such minor technical details.}. The total heat now given out by the solar system sun each second is sufficient to boil all the water in all the oceans on Urantia in just one second of time.
 \vs p041 7:14 \pc Only those suns which function in the direct channels of the main streams of universe energy can shine on forever. Such solar furnaces blaze on indefinitely, being able to replenish their material losses by the intake of space\hyp{}force and analogous circulating energy. But stars far removed from these chief channels of recharging are destined to undergo energy depletion --- gradually cool off and eventually burn out.
 \vs p041 7:15 Such dead or dying suns can be rejuvenated by collisional impact or can be recharged by certain nonluminous energy islands of space or through gravity\hyp{}robbery of near\hyp{}by smaller suns or systems. The majority of dead suns will experience revivification by these or other evolutionary techniques. Those which are not thus eventually recharged are destined to undergo disruption by mass explosion when the gravity condensation attains the critical level of ultimatonic condensation of energy pressure. Such disappearing suns thus become energy of the rarest form, admirably adapted to energize other more favourably situated suns.
 \usection{8.\bibnobreakspace Solar\hyp{}Energy Reactions}
