Get rid of obsolete physical markup.

--- a/tex/p030.tex
+++ b/tex/p030.tex
@@ -140,7 +140,7 @@
 \vsetspace
 \vs p030 1:103 \ublistelem{VI.}\bibnobreakspace \bibemph{SUPERPERSONAL BEINGS.} There is a vast host of other\hyp{}than\hyp{}personal beings of divine origin and of manifold service in the universe of universes. Certain of these beings are resident on the Paradise worlds of the Son; others, like the superpersonal representatives of the Eternal Son, are encountered elsewhere. They are for the most part unmentioned in these narratives, and it would be quite futile to attempt their description to \bibemph{personal} creatures.
 \vsetspace
-\vs p030 1:104 \kern4pt\ublistelem{VII.}\bibnobreakspace \bibemph{UNCLASSIFIED AND UNREVEALED ORDERS.} During the present universe age it would not be possible to place all beings, personal or otherwise, within classifications pertaining to the present universe age; nor have all such categories been revealed in these narratives; hence numerous orders have been omitted from these lists. Consider the following:
+\vs p030 1:104 \ublistelem{VII.}\bibnobreakspace \bibemph{UNCLASSIFIED AND UNREVEALED ORDERS.} During the present universe age it would not be possible to place all beings, personal or otherwise, within classifications pertaining to the present universe age; nor have all such categories been revealed in these narratives; hence numerous orders have been omitted from these lists. Consider the following:
 \begin{quote}
 \vs p030 1:105 The Consummator of Universe Destiny.
 \vs p030 1:106 The Qualified Vicegerents of the Ultimate.
@@ -310,7 +310,7 @@
 \vs p030 2:115 \ublistelem{7.}\bibnobreakspace Associate Registrars.
 \end{quote}
 \vsetspace
-\vs p030 2:116 \kern4pt\ublistelem{VII.}\bibnobreakspace \bibemph{THE CORPS OF PERMANENT CITIZENSHIP.}
+\vs p030 2:116 \ublistelem{VII.}\bibnobreakspace \bibemph{THE CORPS OF PERMANENT CITIZENSHIP.}
 \begin{quote}
 \vs p030 2:117 \ublistelem{1.}\bibnobreakspace The Planetary Midwayers.
 \vs p030 2:118 \ublistelem{2.}\bibnobreakspace The Adamic Sons of the Systems.
