Use "nofancydecor" option by default

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -63,7 +63,7 @@
 \tunemarkuptag{introinclude}
 
 % comment out to enable fancy page decorations
-%\tunemarkuptag{nofancydecor}
+\tunemarkuptag{nofancydecor}
 
 % comment out to disable cover image
 \tunemarkuptag{coverimage}
