Make title frame independent of nofancydecor option

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -67,7 +67,7 @@ Edited by Tigran Aivazian\\[2ex]
 \vspace*{\stretch{0.1}}
 \end{center}
 
-\tunemarkuptwo{nofancydecor}{}{\titleframe}
+\titleframe
 
 \newpage
 
@@ -98,4 +98,4 @@ Text set in \textbf{\itshape\tunemarkup{minionpro}{Adobe }\tunemarkup{garamond}{
 }
 \end{center}
 
-\tunemarkuptwo{nofancydecor}{}{\titleframe}
+\titleframe
