Shorten a footnote at 1:7.6

--- a/tex/p001.tex
+++ b/tex/p001.tex
@@ -73,7 +73,7 @@
 \vs p001 7:3 \pc The concept of truth might possibly be entertained apart from personality, the concept of beauty may exist without personality, but the concept of divine goodness is understandable only in relation to personality. Only a \bibemph{person} can love and be loved. Even beauty and truth would be divorced from survival hope if they were not attributes of a personal God, a loving Father.
 \vs p001 7:4 \pc We cannot fully understand how God can be primal, changeless, all\hyp{}powerful, and perfect, and at the same time be surrounded by an ever\hyp{}changing and apparently law\hyp{}limited universe, an evolving universe of relative imperfections. But we can \bibemph{know} such a truth in our own personal experience since we all maintain identity of personality and unity of will in spite of the constant changing of both ourselves and our environment.
 \vs p001 7:5 Ultimate universe reality cannot be grasped by mathematics, logic, or philosophy, only by personal experience in progressive conformity to the divine will of a personal God. Neither science, philosophy, nor theology can validate the personality of God. Only the personal experience of the faith sons of the heavenly Father can effect the actual spiritual realization of the personality of God.
-\vs p001 7:6 \pc The higher concepts of universe personality imply: identity, self\hyp{}consciousness, self\hyp{}will, and possibility for self\hyp{}revelation. And these characteristics further imply fellowship with other and equal personalities, such as exists in the personality associations of the Paradise Deities. And the absolute unity of these associations is so perfect that divinity becomes known by indivisibility, by oneness. “The Lord God is \bibemph{one.}”\fnst{\textbf{“The Lord God is \bibemph{one.}”}, The Hebrew text of Deuteronomy~6:4 reads: \textheb{אֶחָד יְהוָה אֱלֹהֵינוּ יְהוָה יִשְׂרָאֵל שְׁמַע} ``Hear, O Israel! Yahweh our God, Yahweh \bibemph{is} One.'' This formula is literally quoted in the Greek text of Mark~12:29: \textgreek{Ἄκουε, Ἰσραήλ, κύριος ὁ θεὸς ἡμῶν κύριος εἷς ἐστιν}.} Indivisibility of personality does not interfere with God’s bestowing his spirit to live in the hearts of mortal men. Indivisibility of a human father’s personality does not prevent the reproduction of mortal sons and daughters.
+\vs p001 7:6 \pc The higher concepts of universe personality imply: identity, self\hyp{}consciousness, self\hyp{}will, and possibility for self\hyp{}revelation. And these characteristics further imply fellowship with other and equal personalities, such as exists in the personality associations of the Paradise Deities. And the absolute unity of these associations is so perfect that divinity becomes known by indivisibility, by oneness. “The Lord God is \bibemph{one.}”\fnst{\textbf{“The Lord God is \bibemph{one.}”}, Deuteronomy~6:4 says: \textheb{אֶחָד יְהוָה אֱלֹהֵינוּ יְהוָה יִשְׂרָאֵל שְׁמַע} ``Hear, O Israel! Yahweh our God, Yahweh \bibemph{is} One.'' This formula is literally quoted in the Greek text of Mark~12:29: \textgreek{Ἄκουε, Ἰσραήλ, κύριος ὁ θεὸς ἡμῶν κύριος εἷς ἐστιν}.} Indivisibility of personality does not interfere with God’s bestowing his spirit to live in the hearts of mortal men. Indivisibility of a human father’s personality does not prevent the reproduction of mortal sons and daughters.
 \vs p001 7:7 This concept of indivisibility in association with the concept of unity implies transcendence of both time and space by the Ultimacy of Deity; therefore neither space nor time can be absolute or infinite. The First Source and Centre is that infinity who unqualifiedly transcends all mind, all matter, and all spirit.
 \vs p001 7:8 The fact of the Paradise Trinity in no manner violates the truth of the divine unity. The three personalities of Paradise Deity are, in all universe reality reactions and in all creature relations, as one. Neither does the existence of these three eternal persons violate the truth of the indivisibility of Deity. I am fully aware that I have at my command no language adequate to make clear to the mortal mind how these universe problems appear to us. But you should not become discouraged; not all of these things are wholly clear to even the high personalities belonging to my group of Paradise beings. Ever bear in mind that these profound truths pertaining to Deity will increasingly clarify as your minds become progressively spiritualized during the successive epochs of the long mortal ascent to Paradise.
 \vsetoff
