Clarify the note at 15:4.7

--- a/tex/p015.tex
+++ b/tex/p015.tex
@@ -60,7 +60,7 @@
 \vs p015 4:4 \pc Paradise force organizers are nebulae originators; they are able to initiate about their space presence the tremendous cyclones of force which, when once started, can never be stopped or limited until the all\hyp{}pervading forces are mobilized for the eventual appearance of the ultimatonic units of universe matter. Thus are brought into being the spiral and other nebulae, the mother wheels of the direct\hyp{}origin suns and their varied systems. In outer space there may be seen ten different forms of nebulae, phases of primary universe evolution, and these vast energy wheels had the same origin as did those in the seven superuniverses.
 \vs p015 4:5 \pc Nebulae vary greatly in size and in the resulting number and aggregate mass of their stellar and planetary offspring. A sun\hyp{}forming nebula just north of the borders of Orvonton, but within the superuniverse space level, has already given origin to approximately 40,000 suns, and the mother wheel is still throwing off suns, the majority of which are many times the size of yours. Some of the larger nebulae of outer space are giving origin to as many as $10^8$ suns.
 \vs p015 4:6 Nebulae are not directly related to any of the administrative units, such as minor sectors or local universes, although some local universes have been organized from the products of a single nebula. Each local universe embraces exactly $10^{-5}$ of the total energy charge of a superuniverse irrespective of nebular relationship, for energy is not organized by nebulae --- it is universally distributed.
-\vs p015 4:7 Not all spiral nebulae are engaged in sun making. Some have retained control of many of their segregated stellar offspring, and their spiral appearance is occasioned by the fact that their suns pass out of the nebular arm in close formation but return by diverse routes, thus making it easy to observe them at one point but more difficult to see them when widely scattered on their different returning routes farther out and away from the arm of the nebula. There are not many sun\hyp{}forming nebulae active in Orvonton at the present time, though Andromeda, which is outside the inhabited superuniverse, is very active. This far\hyp{}distant nebula is visible to the naked eye, and when you view it, pause to consider that the light you behold left those distant suns almost $10^6$ years\fnst{\textbf{almost \ldots\ years}, The modern (2003) estimate of the distance to the Andromeda Galaxy (M31) is $2.54 \pm\ 0.06 \times 10^6$ light years. It is possible, however, that here in the text we have a quotation of Edwin Hubble's thoughts which may have crossed his mind when he identified the Cepheid variable stars in M31 in 1925, thus forever settling the debate about the object being extragalactic.} ago.
+\vs p015 4:7 Not all spiral nebulae are engaged in sun making. Some have retained control of many of their segregated stellar offspring, and their spiral appearance is occasioned by the fact that their suns pass out of the nebular arm in close formation but return by diverse routes, thus making it easy to observe them at one point but more difficult to see them when widely scattered on their different returning routes farther out and away from the arm of the nebula. There are not many sun\hyp{}forming nebulae active in Orvonton at the present time, though Andromeda, which is outside the inhabited superuniverse, is very active. This far\hyp{}distant nebula is visible to the naked eye, and when you view it, pause to consider that the light you behold left those distant suns almost million years\fnst{\textbf{almost million years}, The modern (2003) estimate of the distance to the Andromeda galaxy (M31) is $2.54 \pm\ 0.06 \times 10^6$ light years. The estimate given in the text corresponds to one given in the book ``Stars and Atoms'' by Sir Arthur Eddington, which was published in 1927. Edwin Hubble was the first to identify the Cepheid variable stars in M31 in 1925, thus forever settling the debate about the object being extragalactic.} ago.
 \vs p015 4:8 The Milky Way galaxy is composed of vast numbers of former spiral and other nebulae, and many still retain their original configuration. But as the result of internal catastrophes and external attraction, many have suffered such distortion and rearrangement as to cause these enormous aggregations to appear as gigantic luminous masses of blazing suns, like the Magellanic Cloud. The globular type of star clusters predominates near the outer margins of Orvonton.
 \vs p015 4:9 The vast star clouds of Orvonton should be regarded as individual aggregations of matter comparable to the separate nebulae observable in the space regions external to the Milky Way galaxy. Many of the so\hyp{}called star clouds of space, however, consist of gaseous material only. The energy potential of these stellar gas clouds is unbelievably enormous, and some of it is taken up by near\hyp{}by suns and redispatched in space as solar emanations.
 \usection{5.\bibnobreakspace The Origin of Space Bodies}
